fix tap targets were too small

--- a/style.css
+++ b/style.css
@@ -647,3 +647,9 @@ body {
   margin: 2em 10px;
   padding: 3em;
 }
+
+@media (pointer:coarse) {
+  #top ul.links li {
+    margin-bottom: 0.8em;
+  }
+}
